Version 2.75    ( Fri May 25 15:25:29 IDT 2012 )
------------------------------------------------

* Add "=encoding utf8" to the POD of lib/Config/IniFiles.pm
    - The POD contained wide characters and it is now an error in
    with recent Test::Pod and Pod::Simple. 
    - See for example: http://www.cpantesters.org/cpan/report/89000ebe-a5bc-11e1-a439-fa78ab6c2661

Version 2.74    ( Thu May 24 00:46:37 IDT 2012 )
------------------------------------------------

* Made sure .ini files are output on Win32 with CR-LF pairs.
    - Thanks to Ben Johnson for reporting the bug and for a preliminary
    test script.
    - Add t/32mswin-outputs-contain-crs.t

Version 2.73    ( Mon May 14 10:46:38 IDT 2012 )
------------------------------------------------

* Regression bug fix: temporary file creation error should generate a warning
and return undef() instead of throwing an exception.
    - https://rt.cpan.org/Ticket/Display.html?id=77039
    - Thanks to Adam D. Barrat for noticing that, and Gregor Herrmann
    from Debian for reporting this issue.

Version 2.72    ( Sat May  5 19:19:09 IDT 2012 )
------------------------------------------------

* More refactoring.

* Now requiring Fcntl (which is a core module) for SEEK_SET() and SEEK_CUR().

* Update the contact information on the POD.

* Maintainer’s special birthday (5-May) release.

Version 2.71:   ( Wed May  2 10:59:04 IDT 2012 )
------------------------------------------------

* SECURITY BUG FIX: Config::IniFiles used to write to a temporary filename
with a predictable name ("${filename}-new") which opens the door for potential
exploits.

* Now requiring List::MoreUtils (for any() and other functions), File::Temp
and File::Basename .

* Add "use warnings;" to lib/Config/IniFiles.pm .

* More refactoring.

Version 2.70:   ( Fri Apr  6 12:47:25 IDT 2012 )
------------------------------------------------

* Fix the test dependency (in the new t/31comments_with_spaces.t test)